--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
     </main>
   </div>
 
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
 </body>
 
 </html>
